# forpy

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  settings.example.json
.claude/: settings.local.json
docs/: architecture.md  prompt_system.md
prompts/python/: architecture.txt  architecture_pythonique.txt  debug_architecture.txt  debug_debutant.txt  debug_intermediaire.txt  debug_intermediaire_plus.txt  debug_poo.txt  debutant.txt  debutant_plus.txt  entree_sortie_erreurs.txt  fonctions_avancees.txt  intermediaire.txt  intermediaire_avance.txt  intro_poo.txt  manipulation_structure.txt  noob.txt  organisation_code.txt  pattern_expert.txt  pattern_intermediaire.txt  pattern_intermediaire_plus.txt  pattern_poo.txt  poo_plus.txt  poo_pythonique.txt  pythonique_intermediaire.txt  pythonique_intermediaire_plus.txt  qcm_architecture.txt  qcm_python.txt
screens/: chapter_screen.py  exercise_screen.py  home_screen.py  level_screen.py  logic_screen.py  pattern_screen.py  qcm_architecture_screen.py  qcm_screen.py  settings_screen.py  sublevel_screen.py
services/: ai_service.py  prompt_builder.py  qcm_format.json
tests/: conftest.py  test_ai_service.py  test_prompt_builder.py  test_session_state.py  test_translations.py
utils/: session_state.py  theme.py  translations.json  translations.py
