[project]
name = "ForPy"
version = "1.0.0"
description = "Open source Python learning app — Generate unlimited mini-exercises with AI"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "flet>=0.21.0",
    "anthropic>=0.25.0",
    "openai>=1.0.0",
    "google-generativeai>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths  = ["tests"]

# ── Flet build metadata ────────────────────────────────────────────────────────
# Run:  python -m flet.cli build <platform>
#   platforms : windows | linux | apk | ipa | macos | web
#   example   : python -m flet.cli build windows --project ForPy --build-version 1.0.0
#   example   : python -m flet.cli build apk --project ForPy --build-version 1.0.0
# Requires Flutter SDK — see https://flet.dev/docs/publish
#
# Icon is configured below in [tool.flet] — applied automatically to all platforms.
# Alternatively, pass it explicitly: flet build windows --icon icons/icon.png

[tool.flet]
org = "com.forpy"
icon = "icons/icon.png"

[tool.flet.app]
name = "ForPy"
description = "Open source Python learning app — Generate unlimited mini-exercises with AI"

[tool.flet.android]
splash_color = "#1a1a2e"
splash_dark_color = "#1a1a2e"

[tool.flet.app.boot_screen]
show = true
bgcolor = "#1a1a2e"

[tool.flet.flutter.flutter_native_splash]
color = "#1a1a2e"
color_dark = "#1a1a2e"